--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,14 @@
-z3-solver
-pydot
-lrparsing 
-Flask
-puremagic
+z3-solver==4.8.17.0
+pydot==1.4.2
+lrparsing==1.0.13
+pyparsing==2.4.7
+Flask==2.1.2
+puremagic==1.14
+click==8.1.3
+importlib-metadata 4.11.3
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+setuptools==44.1.1
+Werkzeug==2.1.2
+zipp==3.8.0
