--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ pyparsing==2.4.7
 Flask==2.1.2
 puremagic==1.14
 click==8.1.3
-importlib-metadata 4.11.3
+importlib-metadata=4.11.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
